<resources>
    <string name="app_name">Chronometer</string>
    <string name="initial_time">00:00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="capture">Capture</string>
    <string name="button_0_30">0:30</string>
    <string name="button_1_00">1:00</string>
    <string name="button_1_30">1:30</string>
    <string name="button_2_00">2:00</string>
    <string name="button_2_30">2:30</string>
    <string name="button_3_00">3:00</string>
    <string name="button_4_00">4:00</string>
    <string name="button_3_30">3:30</string>
    <string name="textview_0_00">0:00</string>
    <string name="sound">Sound</string>
</resources>
