<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.practice.com.chronometer.MainActivity">

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toTopOf="@+id/button_capture" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_marginRight="40dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toTopOf="@+id/button_capture"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/button_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/chronometer"
        app:layout_constraintRight_toLeftOf="@+id/button_stop"
        app:layout_constraintLeft_toRightOf="@+id/button_start_pause" />

    <Chronometer
        android:id="@+id/chronometer_captured_time_1"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_capture"
        app:layout_constraintRight_toRightOf="@+id/button_capture"
        app:layout_constraintLeft_toLeftOf="@+id/button_capture" />

    <Chronometer
        android:id="@+id/chronometer_captured_time_2"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/chronometer_captured_time_1"
        app:layout_constraintLeft_toLeftOf="@+id/button_capture"
        app:layout_constraintRight_toRightOf="@+id/button_capture" />

    <Chronometer
        android:id="@+id/chronometer_captured_time_3"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/chronometer_captured_time_2"
        app:layout_constraintLeft_toLeftOf="@+id/button_capture"
        app:layout_constraintRight_toRightOf="@+id/button_capture" />

    <Button
        android:id="@+id/button_countdown01"
        android:onClick="countdownButtonClicked"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:text="@string/button_0_30"
        app:layout_constraintRight_toLeftOf="@+id/button_countdown02"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_countdown05" />

    <Button
        android:id="@+id/button_countdown02"
        android:onClick="countdownButtonClicked"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:text="@string/button_1_00"
        app:layout_constraintLeft_toRightOf="@+id/button_countdown01"
        app:layout_constraintTop_toTopOf="@+id/button_countdown01"
        app:layout_constraintRight_toLeftOf="@+id/button_countdown03" />

    <Button
        android:id="@+id/button_countdown03"
        android:onClick="countdownButtonClicked"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:text="@string/button_1_30"
        app:layout_constraintLeft_toRightOf="@+id/button_countdown02"
        app:layout_constraintTop_toTopOf="@+id/button_countdown02"
        app:layout_constraintRight_toLeftOf="@+id/button_countdown04" />

    <Button
        android:id="@+id/button_countdown04"
        android:onClick="countdownButtonClicked"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:text="@string/button_2_00"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_countdown03"
        app:layout_constraintLeft_toRightOf="@+id/button_countdown03" />

    <Button
        android:id="@+id/button_countdown05"
        android:onClick="countdownButtonClicked"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:text="@string/button_2_30"
        app:layout_constraintRight_toLeftOf="@+id/button_countdown06"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_countdown" />

    <Button
        android:id="@+id/button_countdown06"
        android:onClick="countdownButtonClicked"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:text="@string/button_3_00"
        app:layout_constraintTop_toTopOf="@+id/button_countdown05"
        app:layout_constraintRight_toLeftOf="@+id/button_countdown07"
        app:layout_constraintLeft_toRightOf="@+id/button_countdown05" />

    <Button
        android:id="@+id/button_countdown07"
        android:onClick="countdownButtonClicked"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:text="@string/button_3_30"
        app:layout_constraintTop_toTopOf="@+id/button_countdown06"
        app:layout_constraintLeft_toRightOf="@+id/button_countdown06"
        app:layout_constraintRight_toLeftOf="@+id/button_countdown08" />

    <Button
        android:id="@+id/button_countdown08"
        android:onClick="countdownButtonClicked"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:text="@string/button_4_00"
        app:layout_constraintTop_toTopOf="@+id/button_countdown07"
        app:layout_constraintLeft_toRightOf="@+id/button_countdown07"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/textview_0_00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
